.archive/apps/plex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex-beta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-beta
  namespace: plex-beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex-beta
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex-beta
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:

          # RocketLake-S GT1 [UHD Graphics 750]
          - weight: 75
            preference:
              matchExpressions:
              - key: feature.node.kubernetes.io/pci-0300_8086_4c8a.present
                operator: In
                values:
                  - 'true'

          # UHD Graphics 630 (Desktop)
          - weight: 63
            preference:
              matchExpressions:
              - key: feature.node.kubernetes.io/pci-0300_8086_3e92.present
                operator: In
                values:
                  - 'true'
          
          # HD Graphics 530
          - weight: 53
            preference:
              matchExpressions:
              - key: feature.node.kubernetes.io/pci-0300_8086_1912.present
                operator: In
                values:
                  - 'true'
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 32400
        - name: tcp-3005
          containerPort: 3005
          protocol: TCP
        - name: udp-1900
          containerPort: 1900
          protocol: UDP
        - name: udp-5353
          containerPort: 5353
          protocol: UDP
        - name: tcp-8324
          containerPort: 8324
          protocol: TCP
        - name: tcp-32469
          containerPort: 32469
          protocol: TCP
        volumeMounts:
        - name: plex-data
          mountPath: /config
        - name: ceph-fs
          mountPath: /data
        - name: ramdisk
          mountPath: /transcode
        resources:
          requests:
            gpu.intel.com/i915: "1"
            memory: 2Gi
          limits:
            gpu.intel.com/i915: "1"
            memory: 10Gi
        livenessProbe:
          httpGet:
            path: /web/index.html
            port: 32400
          initialDelaySeconds: 120
          periodSeconds: 30
        readinessProbe:
            httpGet:
              path: /web/index.html
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
      - name: plex-data
        persistentVolumeClaim:
          claimName: plex-beta-data-claim
      - name: ceph-fs
        persistentVolumeClaim:
          claimName: cephfs-plexdata
      - name: ramdisk
        emptyDir:
          medium: Memory
          sizeLimit: "8Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: plex-beta-lb
  namespace: plex-beta
spec:
  selector:
    app: plex-beta
  ports:
  - name: http
    port: 32400
    targetPort: 32400
  - name: tcp-3005
    port: 3005
    protocol: TCP
  - name: udp-1900
    port: 1900
    protocol: UDP
  - name: udp-5353
    port: 5353
    protocol: UDP
  - name: tcp-8324
    port: 8324
    protocol: TCP
  - name: tcp-32469
    port: 32469
    protocol: TCP
  type: LoadBalancer
